Sun Nov 30 17:11:05 2014  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_process.rb (test_deadlock_by_signal_at_forking): Use
	  assert_separately.

Sun Nov 30 00:02:52 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (process_options, ruby_script): transcode script name and
	  program name to locale encoding as well as argv.
	  [ruby-dev:48752] [Bug #10555]

	* ruby.c (translit_char_bin): should not use code page dependent
	  CharNext on UTF-8 string.  [ruby-dev:48752] [Bug #10555]

Sat Nov 29 16:53:14 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (ruby_set_argv): convert argv from UTF-8.

	* win32/win32.c (rb_w32_sysinit, cmdglob, w32_cmdvector): convert
	  wide char command line to UTF-8 argv, and glob in UTF-8 so that
	  metacharacters would match multibyte characters.
	  [ruby-dev:48752] [Bug #10555]

Sat Nov 29 16:14:50 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (rb_typeddata_is_kind_of, rb_check_typeddata): ditto.

	* error.c (rb_typeddata_inherited_p): deprecate. still keep for
	  potential binary compatibility.

Sat Nov 29 10:49:23 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (win32_direct_conv, rb_w32_readdir): convert UTF-8
	  and filesystem code page by using Win32 API directly.

Sat Nov 29 09:37:10 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (syserr_initialize): simplify message building and get
	  rid of potential invalid byte sequence.

Sat Nov 29 06:09:44 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* eval_error.c (error_print): respect the encoding of the message.

	* io.c (rb_write_error_str): use rb_w32_write_console() on Windows
	  if stderr is a tty.

Fri Nov 28 05:10:23 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (--with-setup): add option to select ext/Setup file.

Fri Nov 28 05:02:29 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dmyenc.c (Init_enc): separate from dmyext.c for statically
	  linked extension excluding encoding libraries.
