@@ -1,3 +1,8 @@
+Sun Nov 30 18:55:32 2014  Tanaka Akira  <akr@fsij.org>
+
+	* test/ruby/test_process.rb (test_deadlock_by_signal_at_forking):
+	  Don't raise Interrupt.
+
 Sun Nov 30 17:11:05 2014  Tanaka Akira  <akr@fsij.org>
 
 	* test/ruby/test_process.rb (test_deadlock_by_signal_at_forking): Use
